Reduce the random z-index value that was added years ago to prevent the left column div from making right column unclickable
svn commit r74881

--- a/www/styles/store-search-results-page.css
+++ b/www/styles/store-search-results-page.css
@@ -48,7 +48,7 @@ ul.site-search-results li.store-category-tile a span.store-category-tile-title {
 	margin-left: 20px;
 	position: relative;
 	width: 220px;
-	z-index: 99;
+	z-index: 1;
 }
 
 #right_column .swat-frame {
